Implemented basic structure.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello</h1>
+  <div id="root">
+    <div id="word"></div>
+    <div id="img"></div>
+  </div>
 
-  <script src="./src/index.js"></script>
 </body>
 </html>
